# nulqor

./: .gitignore  AGENTS.md  BACKLOG.md  Cargo.toml  OPUS-4.8-PERFORMANCE.md  OPUS-4.8-REVIEW.md  OPUS-4.8-SKILLS-PROCESS.md  OPUS-4.8-TESTS.md  PROJECT_FEATURES.md  README.md  TASKS.md  index.html  nulqor.toml  package-lock.json  package.json  tsconfig.json  vite.config.ts
.cursor/: mcp.json
OLD-app/: AGENTS.md  NULQOR_HANDOFF.md  PLAN.md  PROJECT_FEATURES.md
OLD-app/harness/: README.md  app.go  (+6 more)
archive/: index.md
docs/: BUILD_PLAN.md  DESIGN.md  GOAL.md  PHASES.md  PROJECT_FEATURES.md  architecture-wireframe.html  core-wireframe.rs  index.md
extensions/: index.md
new-plans/: 002-contract-versioning.md  004-concurrency-and-sidecars.md  006-http-api-and-observer-protocol.md  BUILD_PLAN.md  GOAL.md  README.md
rules/: current-date.md  engineering-guardrails.md  index.md  stack-and-tooling.md
runs/: 2026-05-25.jsonl
scripts/: start-dev.mjs
skills/: index.md
src/: README.md  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: capability.rs  commands.rs  context.rs  error.rs  events.rs  ext_chat_panel.rs  ext_hello_panel.rs  ext_host.rs  ext_http_api.rs  ext_mcp_bridge.rs  ext_provider_lmstudio.rs  ext_run_logger.rs  ext_skill_runner.rs  ext_transcript.rs  ext_validation.rs  ipc.rs  lib.rs  loader.rs  main.rs  native_menu.rs  permission.rs  runtime.rs  shell_cursor.rs  startup_config.rs  types.rs  version.rs  window_frame.rs  workbench_prefs.rs
src-tauri/src/extensions/: mod.rs
tools/: index.md
tools/mcp-server/: Cargo.toml
tools/mcp-server/src/: main.rs
tools/nulqor-lint/: Cargo.toml
tools/nulqor-lint/fixtures/sample-broken/: extension.toml
tools/nulqor-lint/src/: lib.rs  main.rs
(+172 files in other folders)
