[package]
name = "nulqor"
version = "0.1.0"
edition = "2021"

[lib]
name = "nulqor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
semver = "1"
thiserror = "2"
toml = "0.8"
nulqor-lint = { path = "../tools/nulqor-lint" }

# Phase 2 deps
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.7", features = ["ws", "macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors"] }
serde_yaml = "0.9"
notify = "6"
regex = "1"
