[package]
name    = "nulqor-mcp-server"
version = "0.1.0"
edition = "2021"
description = "Nulqor MCP stdio server — proxies the five observer tools to the HTTP API"

[[bin]]
name = "nulqor-mcp-server"
path = "src/main.rs"

[dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest    = { version = "0.12", features = ["blocking", "json"] }
